fix: open Control Panel Simple editor without --add-exports
Bare java -cp Control Panel skipped the in-process editor and forked
policyeditor, which is not a PolicyEditor window. Export
sun.security.provider to the unnamed module first so Simple editor
can construct PolicyEditor in this JVM.